updated to gradle 8.6, groovy and gradle works with jdk >= 17, maven tbd, probably a problem with search-and-replace, since a POM cannot be found.